# swagger/yaml/swagger-workflow.yaml
@@ -10,7 +10,6 @@ paths:
       operationId: queryTask
       summary: 查询user task
       tags:
-        - user task managment
         - Flowtask
       consumes:
         - application/json
@@ -19,27 +18,6 @@ paths:
       responses:
         '200':
           description: upload bpmn file  successfully
-          schema:
-            $ref: '#/definitions/StandardResponse'
-  '/flowTask/tasks/{id}':
-    parameters:
-      - name: id
-        in: path
-        required: true
-        type: integer
-    delete:
-      operationId: deleteTaskByID
-      summary: 根据id删除user task
-      tags:
-        - user task managment
-        - Flowtask
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: delete task successfully
           schema:
             $ref: '#/definitions/StandardResponse'
   '/flowTask/unclaim/{id}':
@@ -52,7 +30,6 @@ paths:
       operationId: unclaimTaskByID
       summary: 归还之前认领的task
       tags:
-        - user task managment
         - Flowtask
       consumes:
         - application/json
@@ -68,7 +45,6 @@ paths:
       operationId: completeTask
       summary: '完成task(e.g. 包含assign,group users)'
       tags:
-        - user task managment
         - Flowtask
       consumes:
         - application/json
@@ -89,7 +65,6 @@ paths:
       operationId: claimTaskByID
       summary: 认领task
       tags:
-        - user task managment
         - Flowtask
       consumes:
         - application/json
@@ -105,12 +80,31 @@ paths:
           description: complete user task successfully
           schema:
             $ref: '#/definitions/StandardResponse'
+  '/flowTask/tasks/{id}':
+    parameters:
+      - name: id
+        in: path
+        required: true
+        type: integer
+    delete:
+      operationId: deleteTaskByID
+      summary: 根据id删除user task
+      tags:
+        - Flowtask
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: delete task successfully
+          schema:
+            $ref: '#/definitions/StandardResponse'
   /processDefinition/deploy:
     get:
       operationId: getProcessDefinitionDeploymentList
       summary: 获取部署列表
       tags:
-        - bpmn process definition managment
         - Processdefinition
       produces:
         - application/json
@@ -124,7 +118,6 @@ paths:
       operationId: deployProcessDefinitionByUploadZip
       summary: 上传 bpmn zip 文件部署
       tags:
-        - bpmn process definition managment
         - Processdefinition
       consumes:
         - multipart/form-data
@@ -159,7 +152,6 @@ paths:
       operationId: deleteProcessDefinitionById
       summary: 根据deployment ID删除
       tags:
-        - bpmn process definition managment
         - Processdefinition
       produces:
         - application/json
@@ -172,7 +164,6 @@ paths:
       operationId: getProcessDefinitionById
       summary: 根据deployment ID查询详情
       tags:
-        - bpmn process definition managment
         - Processdefinition
       produces:
         - application/json
@@ -183,7 +174,7 @@ paths:
             $ref: '#/definitions/StandardResponse'
           examples:
             application/json:
-              code: -48936358
+              code: 200
               message: Excepte
               data:
                 entityList:
@@ -194,7 +185,6 @@ paths:
       operationId: deployPreDefinedProcessDefinition
       summary: 部署预定义的bpmn文件
       tags:
-        - bpmn process definition managment
         - Processdefinition
       consumes:
         - application/json
@@ -219,7 +209,6 @@ paths:
       operationId: createProcessInstance
       summary: 创建流程实例
       tags:
-        - process instance managment
         - Processinstance
       consumes:
         - application/json
@@ -245,7 +234,6 @@ paths:
       operationId: deleteProcessInstanceByID
       summary: 根据instance id删除流程实例
       tags:
-        - process instance managment
         - Processinstance
       consumes:
         - application/json
@@ -260,7 +248,6 @@ paths:
       operationId: queryProcessInstanceByID
       summary: 根据instance id查看流程实例
       tags:
-        - process instance managment
         - Processinstance
       consumes:
         - application/json
@@ -281,7 +268,6 @@ paths:
       operationId: queryProcessInstanceByKey
       summary: 根据instance key获取列表
       tags:
-        - process instance managment
         - Processinstance
       consumes:
         - application/json
@@ -302,7 +288,6 @@ paths:
       operationId: queryTaskHistoricalDataByID
       summary: 根据ID查询 process instance的历史归档记录
       tags:
-        - process instance managment
         - Processinstance
       consumes:
         - application/json
